# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  setup.cfg  setup.py
pre_commit_hooks/: check_config.py
